# crystal_planes

./: .gitignore  .gitmodules  COPYING  Cargo.toml  Readme.md  hidden_ramp.txt
.cargo/: config.toml
assets/maps/: simple.txt
examples/: building_blocks.rs  compress.rs  ff_analyze.rs  octree_vis.rs  ray_cast.rs  systems.rs  trace.rs  zorder.rs  zorder_quad.rs
src/: custom_pass.rs  fly_camera.rs  hud.rs  hud_egui.rs  lib.rs  light.rs  log_property_plugin.rs  main.rs  map.rs  math.rs  octree.rs  octree_render.rs  propent.rs  property.rs  quad.rs  quad_pass.rs  quad_render.rs  rad.rs  systems.rs  util.rs  vertex.rs
src/assets/prefab/: crystal_planes.ron
src/assets/shaders/src/fragment/: quad.frag
src/assets/shaders/src/vertex/: quad.vert
src/crystal/: accel.rs  buffer.rs  ffs.rs  map.rs  math.rs  mod.rs  rad.rs  rad_expv.rs  rad_impv.rs  rad_noop.rs  rad_par.rs  rad_ref.rs  rad_simd.rs  rad_simdeez.rs  scene.rs  util.rs
src/doc/: bench.ods
src/hud/: button.rs  mod.rs
src/map/: dense_blockmap.rs  map.rs  mod.rs  plane_scene.rs
src/octree/: mod.rs  octree.rs  octree_bottom_up.rs  util.rs
src/rad/: compress.rs  ffs.rs  mod.rs  simd.rs  worker.rs
