[package]
name = "crystal_planes"
version = "0.1.0"
authors = ["sim"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = {git="https://github.com/bevyengine/bevy.git", branch="master"}
arrayvec = "^0.5"
bevy = "^0.2"
bevy_fly_camera={path="bevy_fly_camera"}
bincode = "*"
image = "*"
ndarray="*"
rand = {version = "^0.7", features = ["small_rng"]}
rayon="^1"
rodio = "*"
serde = { version = "1", features = ["derive"] }
simdeez = "^1"
